<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:id="@+id/menuBackground">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/menubackground">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/sharp_account_circle_white_48dp"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/header"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.25"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:text="Hello World"/>

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:onClick="gotoGallery"
            android:src="@drawable/collections" />

        <TextView
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/menu_text_size"
            android:clickable="true"
            android:onClick="gotoGallery"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/menu_photo_gallery"
            android:textColor="#696969" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:onClick="scanFrame"
            android:src="@drawable/discover"/>

        <TextView
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/menu_find_frame"
            android:textColor="#696969"
            android:clickable="true"
            android:onClick="scanFrame"
            android:textSize="@dimen/menu_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:onClick="logOut"
            android:src="@drawable/power"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/menu_text_size"
            android:textColor="#696969"
            android:clickable="true"
            android:onClick="logOut"
            android:text="@string/menu_log_out"/>
    </LinearLayout>



</LinearLayout>